--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 .body {
-    background-color: #bb6a08;
+    background-color: #0b0d17;
 }
 
 
@@ -70,7 +70,7 @@
     height: 40px;
     padding: 10px 20px;
     border-radius: 50px;
-    background-color: #F28705;
+    background-color: #0b0d17;
     box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
     transition: all .5s ease;
 }
@@ -140,7 +140,7 @@
 .principal__circle {
     height: 280px;
     width: 280px;
-    background-color: #F28705;
+    background-color: #0b0d17;
     border-radius: 50%;
     box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
     position: relative;
@@ -935,7 +935,7 @@
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    background: #F28705;
+    background: #0b0d17;
     box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
     position: absolute;
     top: 35%;
@@ -1350,7 +1350,7 @@
     }
 
     .itemActive {
-        border-bottom: solid 1px #F28705;
+        border-bottom: solid 1px #215e15;
     }
 
     /* Footer*/
